# leptos-tauri-app

./: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwindcss command.txt
models/: data_test.json  model_test.json  template.json  健康指数.json
models_test/: test_model.json  test_model2.json
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  components.rs  main.rs  models.rs  pages.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  helper.rs  lib.rs  loader.rs  main.rs  models.rs  saver.rs
src/components/: tree_node.rs  tree_node_children.rs
src/pages/: home.rs  save.rs  tree.rs
styles/: output.css
