[package]
name = "leptos-tauri-app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
leptos_router = "0.7.7"
anyhow = "1.0.95"
shared={path="shared"}
futures = "0.3.31"
leptos_icons = "0.5.0"
icondata = "0.5.0"
tokio = {version="1.43.0", features=["sync"]}
lazy_static = "1.5.0"
send_wrapper = "0.6.0"

[workspace]
members = [ "shared","src-tauri"]
